--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>AiPPT</title>
-  <script src="/docmee-ui-sdk-iframe.min.js"></script>
+  <script src="*/docmee-ui-sdk-iframe.min.js"></script>
 
   <style>
     body {
