--- a/index.html
+++ b/index.html
@@ -1,75 +1,69 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+  <head>
+    <meta charset="UTF-8" />
+    <title>AiPPT</title>
+    <script src="/docmee-ui-sdk-iframe.min.js"></script>
 
-<head>
-  <meta charset="UTF-8" />
-  <title>AiPPT</title>
-  <script src="/docmee-ui-sdk-iframe.min.js"></script>
+    <style>
+      body {
+        width: 100vw;
+        height: 100vh;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      #container {
+        width: calc(100% - 20px);
+        height: calc(100% - 20px);
+        margin: 0;
+        padding: 0;
+        border-radius: 12px;
+        box-shadow: 0 0 12px rgba(120, 120, 120, 0.3);
+        overflow: hidden;
+        background: linear-gradient(-157deg, #f57bb0, #867dea);
+        color: white;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="container"></div>
 
-  <style>
-    body {
-      width: 100vw;
-      height: 100vh;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+    <script>
+      const docmeeUI = new DocmeeUI({
+        token: 'ak_uL78W0vvETpEsLBMjk', // 不推荐直接使用 Api-Key，请在服务端调用 createApiToken 接口获取的 token
+        container: document.querySelector('#container'), // 挂载 iframe 的容器
+        page: 'creator', // 'dashboard' ppt列表; 'creator' 创建页面
+        background: 'linear-gradient(-157deg,#f57bb0, #867dea)',
+        padding: '40px 20px 0px',
+        onMessage(message) {
+          console.log(message)
 
-    #container {
-      width: calc(100% - 20px);
-      height: calc(100% - 20px);
-      margin: 0;
-      padding: 0;
-      border-radius: 12px;
-      box-shadow: 0 0 12px rgba(120, 120, 120, 0.3);
-      overflow: hidden;
-      background: linear-gradient(-157deg, #f57bb0, #867dea);
-      color: white;
-    }
-  </style>
-</head>
-
-<body>
-  <div id="container"></div>
-
-  <script>
-    const token = process.env.DOCMEE_TOKEN;
-
-    const docmeeUI = new DocmeeUI({
-      token: token,
-      container: document.querySelector('#container'), // 挂载 iframe 的容器
-      page: 'creator', // 'dashboard' ppt列表; 'creator' 创建页面
-      background: 'linear-gradient(-157deg,#f57bb0, #867dea)',
-      padding: '40px 20px 0px',
-      onMessage(message) {
-        console.log(message);
-
-        if (message.type === 'invalid-token') {
-          console.log('token 认证错误'); // 在token失效时触发
-        }
-        if (message.type === 'beforeGenerate') {
-          const { subtype, fields } = message.data;
-          if (subtype === 'outline') {
-            // 生成大纲前触发
-            console.log('即将生成ppt大纲', fields);
-            return true;
-          } else if (subtype === 'ppt') {
-            // 生成ppt前触发
-            console.log('即将生成ppt', fields);
-            docmeeUI.sendMessage({
-              type: 'success',
-              content: '继续生成PPT',
-            });
-            return true;
+          if (message.type === 'invalid-token') {
+            console.log('token 认证错误') // 在token失效时触发
           }
-        }
-        if (message.type === 'beforeDownload') {
-          return `PPT_${new Date().getTime()}.pptx`;
-        }
-      },
-    });
-  </script>
-</body>
-
+          if (message.type === 'beforeGenerate') {
+            const { subtype, fields } = message.data
+            if (subtype === 'outline') {
+              // 生成大纲前触发
+              console.log('即将生成ppt大纲', fields)
+              return true
+            } else if (subtype === 'ppt') {
+              // 生成ppt前触发
+              console.log('即将生成ppt', fields)
+              docmeeUI.sendMessage({
+                type: 'success',
+                content: '继续生成PPT',
+              })
+              return true
+            }
+          }
+          if (message.type === 'beforeDownload') {
+            return `PPT_${new Date().getTime()}.pptx`
+          }
+        },
+      })
+    </script>
+  </body>
 </html>
