--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <script>
       const docmeeUI = new DocmeeUI({
-        token: 'ak_uL78W0vvETpEsLBMjk',
+        token: 'ak_6J7Gga3TEsE6s5uyUT',
         container: document.querySelector('#container'), // 挂载 iframe 的容器
         page: 'creator', // 'dashboard' ppt列表; 'creator' 创建页面
         background: 'linear-gradient(-157deg,#f57bb0, #867dea)',
